Recycler view list and api in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Audiovisual Manager</string>
     <string-array name="astatus_list">
         <item>Status</item>
+        <item>Todos</item>
         <item>Pendientes</item>
         <item>Finalizados</item>
     </string-array>
