--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="update_game">Actualizar Juego</string>
     <string name="viewto">Viendo a %1$s</string>
     <string name="password_updated">Contraseña Actualizada</string>
+    <string name="status_updated">Privacidad Actualizada</string>
     <string name="password_dont_match">Las contraseñas no coinciden</string>
     <string name="fill_all_fields">Please fill all the fields</string>
     <string name="user_already_extis">User already exists</string>
